--- a/contact-us.html
+++ b/contact-us.html
@@ -12,10 +12,14 @@
 </head>
 
 <body>
+  <div id="loading" class="loadingio-spinner-eclipse-hhrro25cmbp"><div class="ldio-fw6u0p7j8pm">
+    <div></div>
+    </div></div>
+
   <header id="nav-bar">
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-lg">
-        <img src="images/home/logo.png" alt="">
+        <a href="index.html"> <img src="images/home/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -61,7 +65,7 @@
     <section id="contact">
       <div class="container">
         <div class="menu__type">
-          <p><a href="index.html">Home</a> | <a class="menu__a" href="menu.html">Menu</a></p>
+          <p><a href="index.html">Home</a> | <a class="menu__a" href="contact-us.html">Contact Us</a></p>
         </div>
         <div class="contact__h1">
           <h1>Contact Us</h1>
@@ -71,38 +75,38 @@
           <div class="contact__phone2 col-12 col-md-4">
             <div class="phone">
               <img src="images/menu/tel.png" alt="">
-            </div>
-            <div class="type">
-              <h2>Email Address</h2>
-              <p>eaturkish@gmail.com</p>
+              <div class="type">
+                <h2>Email Address</h2>
+                <p>eaturkish@gmail.com</p>
+              </div>
             </div>
             <div class="phone">
               <img src="images/menu/mail.png" alt="">
-            </div>
-            <div class="type">
-              <h2>Instagram</h2>
-              <p>eaturkish</p>
+              <div class="type">
+                <h2>Instagram</h2>
+                <p>eaturkish</p>
+              </div>
             </div>
             <div class="phone">
               <img src="images/menu/instafg.png" alt="">
-            </div>
-            <div class="type">
-              <h2>Twitter</h2>
-              <p>eaturkish</p>
+              <div class="type">
+                <h2>Twitter</h2>
+                <p>eaturkish</p>
+              </div>
             </div>
             <div class="phone">
               <img src="images/menu/tewi.png" alt="">
-            </div>
-            <div class="type">
-              <h2>Phone Number</h2>
-              <p>+1 212-344-1230</p>
+              <div class="type">
+                <h2>Phone Number</h2>
+                <p>+1 212-344-1230</p>
+              </div>
             </div>
             <div class="phone">
               <img src="images/menu/face.png" alt="">
-            </div>
-            <div class="type">
-              <h2>Facebook</h2>
-              <p>eaturkish</p>
+              <div class="type">
+                <h2>Facebook</h2>
+                <p>eaturkish</p>
+              </div>
             </div>
           </div>
 
@@ -121,7 +125,10 @@
         </div>
         <div class="map">
           <h2></h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20128.415020966535!2d69.22608403108245!3d41.30341077164032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b062e855555%3A0xba99f698cb5024f5!2sPERSIA!5e0!3m2!1suz!2s!4v1690175399750!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20128.415020966535!2d69.22608403108245!3d41.30341077164032!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b062e855555%3A0xba99f698cb5024f5!2sPERSIA!5e0!3m2!1suz!2s!4v1690175399750!5m2!1suz!2s"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
@@ -164,12 +171,18 @@
           <h2>Working Hours</h2>
           <p>Monday-Friday: <br>
             08:00 am -12:00 am</p>
-            <p>Saturday-Sunday: <br>
-              07:00am -11:00 pm</p>
+          <p>Saturday-Sunday: <br>
+            07:00am -11:00 pm</p>
         </div>
       </div>
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+  integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+  integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
