--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+  <div id="loading" class="loadingio-spinner-eclipse-hhrro25cmbp"><div class="ldio-fw6u0p7j8pm">
+    <div></div>
+    </div></div>
   <a id="backtop">
     <img src="" alt="">
   </a>
@@ -93,7 +96,7 @@
         <div class="popular__card">
           <div class="owl-carousel owl-theme carousel">
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/kebab.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -103,7 +106,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/pizza.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img class="star" src="images/home/star.png" alt="">
@@ -113,7 +116,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/gamburger.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -123,7 +126,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/free.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -133,7 +136,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/kebab.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -143,7 +146,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/pizza.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -153,7 +156,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/gamburger.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -163,7 +166,7 @@
               </div>
             </div>
             <div class="row item">
-              <div class="card col-12 col-md-4">
+              <div class="card col-12 col-md-3">
                 <div class="bg"><img src="images/home/free.png" alt="">
                   <h3>Barbecue Shish kebab Shashlik <br> Skewer</h3>
                   <img src="images/home/star.png" alt="">
@@ -244,7 +247,7 @@
             <div class="tab-content" id="pills-tabContent">
               <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
                 tabindex="0">
-                <div class="our__card row gy-4 mt-3">
+                <div class="our__card row gy-4 mt-3 m-auto">
                   <div class="card col-12 col-md-4">
                     <div class="card col-12 col-md-4">
                       <div class="bg"><img src="images/home/shish kabob.png" alt="">
@@ -744,8 +747,7 @@
               <p>16 Apr 2021 </p>
             </div>
           </div>
-          <button class="btn"><a href="news.html">View More</a>
-          </button>
+          <button class="button01">View More</button>
         </div>
       </div>
     </section>
@@ -755,11 +757,9 @@
     </section>
     <section id="video">
       <div class="container">
-        <div class="media__father">
 
-        </div>
-        <div class="media">
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <div class="media row">
+          <button type="button" class="btn btn-primary col-12" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img src="images/home/Play.png" alt="">
           </button>
 
@@ -839,9 +839,9 @@
           <img src="images/home/turkish.png" alt="">
           <p>"The best way to find yourself is to lose yourself in the <br> service of others.”</p>
           <div class="social__foot">
-            <img src="images/home/face.png" alt="">
-            <img src="images/home/twit.png" alt="">
-            <img src="images/home/insta.png" alt="">
+            <img src="images/home/face.png">
+            <img src="images/home/twit.png">
+            <img src="images/home/insta.png">
             <p>2022 Pop online. All Rights reserved.</p>
           </div>
         </div>
