--- a/menu.html
+++ b/menu.html
@@ -18,10 +18,13 @@
 </head>
 
 <body>
+  <div id="loading" class="loadingio-spinner-eclipse-hhrro25cmbp"><div class="ldio-fw6u0p7j8pm">
+    <div></div>
+    </div></div>
   <header id="nav-bar">
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-lg">
-        <img src="images/home/logo.png" alt="">
+        <a href="index.html"> <img src="images/home/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -71,7 +74,86 @@
       </div>
       <div class=" father">
         <div class="menu__blog">
-          <h1>Contact Us</h1>
+          <h1 class="h1">Our Regular Menu <br> Pack</h1>
+          <div class="our__tab1">
+            <ul class="row nav nav-pills nav-fill" id="pills-tab" role="tablist">
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
+                  type="button" role="tab" aria-controls="pills-home" aria-selected="true">
+                  All
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
+                  type="button" role="tab" aria-controls="pills-profile" aria-selected="false">
+                  Shawarma
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
+                  type="button" role="tab" aria-controls="pills-contact" aria-selected="false">
+                  Turk Kebab
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled"
+                  type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">
+                  Hamburger Kebab
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-doner-tab" data-bs-toggle="pill" data-bs-target="#pills-doner"
+                  type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">
+                  Doner kebab
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled"
+                  type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">
+                  Shish kebab
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-pizza-tab" data-bs-toggle="pill" data-bs-target="#pills-pizza"
+                  type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">
+                  French fries Pizza
+                </button>
+              </li>
+              <li class="nav-item border rounded-5 mx-3 col-12 col-md-6" role="presentation">
+                <button class="nav-link" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled"
+                  type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">
+                  Desserts
+                </button>
+              </li>
+
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+              <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"
+                tabindex="0">
+
+              </div>
+              <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab"
+                tabindex="0">
+              </div>
+              <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab"
+                tabindex="0">
+              </div>
+              <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab"
+                tabindex="0">
+              </div>
+              <div class="tab-pane fade" id="pills-doner" role="tabpanel" aria-labelledby="pills-disabled-tab"
+                tabindex="0">
+              </div>
+              <div class="tab-pane fade" id="pills-pizza" role="tabpanel" aria-labelledby="pills-disabled-tab"
+                tabindex="0">
+              </div>
+              <div class="tab-pane fade" id="pills-dessert" role="tabpanel" aria-labelledby="pills-disabled-tab"
+                tabindex="0">
+                Tab 5 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Illo, quidem!
+              </div>
+            </div>
+          </div>
         </div>
         <div class="row menu__father">
             <div class="card col-12 col-md-4">
