--- a/news.html
+++ b/news.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
+  <div id="loading" class="loadingio-spinner-eclipse-hhrro25cmbp"><div class="ldio-fw6u0p7j8pm">
+    <div></div>
+    </div></div>
   <header id="nav-bar">
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container-lg">
-        <img src="images/home/logo.png" alt="">
+        <a href="index.html"> <img src="images/home/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
           aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -215,6 +218,12 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+  integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+  integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
